kubernetes-destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: spring-boot-app-service
spec:
   host: spring-boot-app-service
   trafficPolicy:
     tls:
       mode: DISABLE
